--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "husky":{
       "hooks":{
-        "pre-commit":"lint-staget"
+        "pre-commit":"lint-staged"
         
       }
     },
